# arc-cli

./: .dockerignore  .env.example  .env.local  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  TODO.md  arc.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: context.py
app/api/: webhook_receiver.py
app/core/: critic_agent.py  rubric_parser.py  utils.py
app/githandler/: client.py
app/llm/: anthropic_client.py  base.py  factory.py  gemini_client.py  mock_client.py  openai_client.py
app/local_runner/: actor_watchdog.py
config/: settings.py
rubrics/: python_best_practices.yaml  security_common.yaml
tests/: test_arc.py  test_critic_agent.py  test_utils.py
