[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-cli"
version = "0.1.0"
description = "A.R.C. — Adversarial Resolution Cycle. AI code review with Agent vs Critic debate."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "Hu Cao"},
]
keywords = ["ai", "code-review", "llm", "agent", "critic", "gemini", "claude", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic-settings>=2.6.0",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.84.0"]
openai = ["openai>=2.28.0"]
gemini = ["google-genai>=1.67.0"]
all = [
    "anthropic>=0.84.0",
    "openai>=2.28.0",
    "google-genai>=1.67.0",
]
dev = [
    "pytest>=8.0",
    "anthropic>=0.84.0",
    "openai>=2.28.0",
    "google-genai>=1.67.0",
]

[project.scripts]
arc = "arc:main"

[project.urls]
Homepage = "https://github.com/hucao/arc-cli"
Repository = "https://github.com/hucao/arc-cli"

[tool.setuptools.packages.find]
include = ["app*", "config*", "rubrics*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.setuptools]
py-modules = ["arc"]


[tool.pytest.ini_options]
testpaths = ["tests"]
